# pubchat

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
blob/: .env  Cargo.toml  Dockerfile
blob/migrations/: 1_create_blob_table.sql
blob/src/: main.rs
blob/src/common/: router.rs
blob/src/controller/: blob.rs  mod.rs  session.rs
blob/src/model/: blob.rs
blob/src/queue/: consumer.rs
blob/src/repository/: blob.rs  db.rs  mod.rs  session.rs
blob/src/service/: blob.rs  session.rs
blob/src/vo/: blob.rs
client/: .env  Cargo.toml  build.rs
client/migrations/: 1_table_init.sql  2_contact_table.sql  2_friends_table.sql  3_session_table.sql
client/src/: login_ui.rs  main.rs  ui.rs
client/src/asynrt/: mod.rs
client/src/cache/: contact.rs  friends.rs  message.rs  mod.rs  session.rs
client/src/common/: log.rs
client/src/ext/: loader.rs  mod.rs
client/src/proto/: im.rs  mod.rs
client/src/remote/: blob.rs  connection.rs  contact.rs  login.rs  message.rs  mod.rs  session.rs
client/src/repository/: contact.rs  db.rs  friend.rs  message.rs  mod.rs  session.rs  token.rs
client/src/service/: cache.rs  connection.rs  contact.rs  friend.rs  login.rs  message.rs  mod.rs  session.rs  token_store.rs
client/src/ui/: app.rs  friend_service.rs  input_handler.rs  login.rs  mod.rs  models.rs  renderer.rs
client/src/ui/component/: chat.rs  mod.rs  session.rs
client/src/ui/events/: chat.rs  contact.rs  insert_mode.rs  message_sender.rs  mod.rs  normal_mode.rs  send.rs  session_manager.rs
client/src/ui/events/auth/: login.rs  register.rs
client/src/ui/renderers/: chat.rs  contact.rs  contacts.rs  friends_list.rs  mod.rs  session.rs
client/src/ui/screen/: chat.rs  contact.rs  login.rs  mod.rs  register.rs
client/src/ui/screen/auth/: login.rs  mod.rs  register.rs
connection/: .env  Cargo.toml
connection/src/: client.rs  connection.rs  main.rs  manager.rs  message_handler.rs  mod.rs  queue.rs
connection/src/handlers/: chat.rs  connect.rs  mod.rs  ping.rs
connection/src/queue/: mod.rs
core/: Cargo.toml  build.rs
core/proto/: message.proto
core/src/: auth.rs  extension.rs  extract.rs  lib.rs  log.rs  response.rs
core/src/api/client/: blob.rs  contact.rs  login.rs  message.rs  mod.rs  session.rs
core/src/api/types/: auth.rs  blob.rs  contact.rs  message.rs  mod.rs  session.rs
core/src/proto/: codec.rs  convert.rs  message.rs  mod.rs
docker/: README.md  blob.yml  docker-compose.rabbitmq.yml  docker-compose.redis.yml  mysql.yml  nginx.conf  nginx.yml  redis.yml
example/: Cargo.toml
example/src/: build_complete_package.rs  build_package.rs  command.rs  complete_plugin.rs  lib.rs
extension/: Cargo.toml  README.md  build.rs
extension/examples/: command.rs  filter.rs  hello_world.rs
extension/proto/: message.proto
extension/src/: lib.rs
extension/src/core/: codec.rs  convert.rs  mod.rs
extension/src/extension/: mod.rs
gateway/: Cargo.toml
message/: Cargo.toml
message/bruno/api/environments/: dev.bru
message/migrations/: 10_brand.sql  12_friend_test_data.sql  1_table_init.sql  5_drop_union_key.sql  9_brand.sql
message/src/: main.rs
message/src/common/: auth.rs  response.rs  router.rs
message/src/consumer/: message.rs  mod.rs
message/src/controller/: brands.rs  cache.rs  food.rs  friend.rs  message.rs  ratings.rs  user.rs
message/src/model/: message.rs  role.rs  user.rs
message/src/repository/: db.rs  message.rs  mod.rs  rdb.rs  role.rs
message/src/service/: food.rs  friend.rs  message.rs  message_consumer.rs  mod.rs  rating.rs
message/src/test/: mod.rs
message/src/vo/: friend.rs  mod.rs  user.rs
proto/: message.proto
router/: Cargo.toml
session/: .env  Cargo.toml
session/bruno/api/auth/: login.bru
session/bruno/api/brand/: brand with category.bru
session/bruno/api/crawl/: crawl data.bru
session/migrations/: 1_create_messages_table.sql  2_create_sessions_table.sql
session/src/: main.rs
session/src/common/: router.rs
session/src/consumer/: message.rs  mod.rs
session/src/controller/: message.rs  session.rs
session/src/model/: message.rs  session.rs
session/src/queue/: consumer.rs  mod.rs
session/src/repository/: message.rs  mod.rs  rdb.rs  session.rs
session/src/service/: message.rs  session.rs
session/src/vo/: message.rs  session.rs
src/: main.rs  ui.rs
user/: .env  Cargo.toml
user/bruno/api/brand/: brand top list.bru
user/migrations/: 11_contact_list.sql  11_friend_list.sql  12_contact_test_data.sql  2_user_wx_update.sql  3_food_init.sql  4_user_food_choice.sql  6_foods_update.sql  7_user_avatar.sql  8_rating.sql
user/src/: main.rs
user/src/common/: enums.rs  log.rs  mod.rs  request.rs  router.rs
user/src/controller/: auth.rs  brands.rs  contact.rs  food.rs  friend.rs  index.rs  mod.rs  ratings.rs  role.rs  user.rs
user/src/model/: brand.rs  contact.rs  food.rs  friend.rs  mod.rs  org.rs  rating.rs
user/src/repository/: brand.rs  contact.rs  db.rs  food.rs  friend.rs  mod.rs  rating.rs  rdb.rs  role.rs  user.rs
user/src/service/: auth.rs  brand.rs  contact.rs  food.rs  friend.rs  mod.rs  role.rs  user.rs
user/src/vo/: auth.rs  contact.rs  crawler.rs  food.rs  friend.rs  mod.rs  role.rs
