[workspace]
members = [
    "client",
    "gateway",
    "router",
    "session"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/casparcao/pubchat"
authors = ["caohailong"]

[workspace.dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
reqwest = "0.12"
bytes = "1.10"
futures = "0.3" 
prost = "0.14"