[workspace]
resolver = "3"
members = [
    "core",
    "client",
    "connection",
    "router",
    "session",
    "user",
    "message",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/casparcao/pubchat"
authors = ["caohailong"]

[workspace.dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = {version = "0.4" ,features = ["serde"]}
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
bytes = "1.10"
futures = "0.3" 
prost = "0.14"
axum = {version = "0.8", features = ["macros"]}
axum-extra = { version = "0.10", features = ["multipart"] }
tower = {version = "0.5", features = ["timeout"]}
tower-http = {version = "0.6", features = ["full"]}
log = "0.4"
jsonwebtoken = {version = "10.0", features = ["rust_crypto"]}
dotenv = "0.15.0"
snowflaker = "0.3"
redis = "0.32"
sqlx = { version = "0.8", features = [ "mysql", "sqlite", "migrate", "runtime-tokio", "chrono", "derive", "rust_decimal" ] }
rust_decimal = "1.38"
validator = {version = "0.20", features = ["derive"]}
http-body = "1.0"
http = "1.3"
lapin = "3.7"
deadpool = "0.12"
deadpool-lapin = "0.13"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = true