[package]
name = "blob"
edition = "2024"
description = "blob service: Manages blob storage"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
log = { workspace = true }
jsonwebtoken = { workspace = true }
dotenv = { workspace = true }
snowflaker = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
rust_decimal = { workspace = true }
chrono = { workspace = true }
http-body = { workspace = true }
http = { workspace = true }
lapin = { workspace = true }
core = { path = "../core" }
deadpool = { workspace = true }
deadpool-lapin = { workspace = true }
env_logger = { workspace = true }
base64 = { workspace = true }
md5 = { workspace = true }