[package]
name = "pubchat"
edition = "2024"
description = "chat program based on terminal"

[dependencies]
crossterm = {workspace = true}
ratatui = {workspace = true}
color-eyre = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
chrono = {workspace = true}
bytes = {workspace = true}
prost = {workspace = true}
reqwest = { workspace = true }
core = { path = "../core" }