[package]
name = "client"
edition = "2024"
description = "chat program based on terminal"

[[bin]]
name = "pubchat"
path = "src/main.rs"

[dependencies]
crossterm = {workspace = true}
ratatui = {workspace = true}
color-eyre = {workspace = true}
tokio = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
chrono = {workspace = true}
bytes = {workspace = true}
prost = {workspace = true}
core = { path = "../core" }
pubchat = { path = "../extension" }
sqlx = { workspace = true }
anyhow = {workspace = true}
dotenv = {workspace = true}
log = {workspace = true}
env_logger = { workspace = true }
snowflaker = { workspace = true }
base62 = { workspace = true }
zip = { workspace = true }
tempfile = { workspace = true }