[package]
name = "connection"
edition = "2024"
description = "IM connection service: Manages client connections and WebSocket/TCP long links"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
core = { path = "../core" }

# Optional: Communicate with other services (via gRPC or HTTP)
# reqwest = { workspace = true }