[package]
name = "connection"
edition = "2024"
description = "IM connection service: Manages client connections and WebSocket/TCP long links"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
core = { path = "../core" }
lapin = { workspace = true }
dotenv = { workspace = true }
deadpool = { workspace = true }
deadpool-lapin = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }