[package]
name = "core"
edition = "2024"
description = "core service"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
prost = {workspace = true}
axum = { workspace = true }
axum-extra = {workspace = true}
tower = {workspace = true}
tower-http = { workspace = true }
log = {workspace = true}
jsonwebtoken = {workspace = true}
thiserror = { workspace = true }
http = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
prost-build = "0.14" 