[package]
name = "pubchat"
edition = "2024"
description = "pubchat extension"

[lib]
name = "pubchat"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = {workspace = true}
thiserror = { workspace = true }
prost = {workspace = true}
serde = { workspace = true }
bytes = { workspace = true }
base62 = { workspace = true }

[build-dependencies]
prost-build = "0.14" 