# gateway/Cargo.toml

[package]
name = "session"
edition = "2024"
description = "IM Gateway: Manages client connections and WebSocket/TCP long links"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# 可选：与其他服务通信（如通过 gRPC 或 HTTP）
# reqwest = { workspace = true }
# prost = "0.11"